--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ body {
 #top-site-header {
   box-shadow: 0 6px 16px 0 #1919190f;
   top: 0;
-  z-index: 20;
+  z-index: 999;
 }
 
 /* MI - HOME LOGO */
@@ -32,7 +32,7 @@ body {
   box-sizing: initial;
   flex-shrink: 0;
   position: relative;
-  z-index: 100;
+  z-index: 999;
 }
 
 #nav-logo-link,
@@ -179,61 +179,12 @@ body {
 
 /* HOME CSS END */
 
-/* CART CSS SART */
-.nav-checkout-step {
-  align-items: center;
-  color: #d0d0d0;
-  display: flex;
-  font-size: 18px;
-  position: relative;
-}
+/* CART CSS START */
 
-.first ~ .nav-checkout-step {
-  color: #d0d0d0;
-  border-color: #d0d0d0;
-}
 
-.first ~ .nav-checkout-step:before {
-  content: "";
-  background-color: #d0d0d0;
-  height: 1px;
-  margin: 0 18px;
-  width: 0;
-  /* Additional pseudo-element styles here, if needed */
-}
 
-@media (min-width: 768px) {
-  .first ~ .nav-checkout-step:before {
-    width: 57px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .first ~ .nav-checkout-step:before {
-    width: 157px;
-  }
-}
-
-@media (min-width: 1280px) {
-  .first ~ .nav-checkout-step:before {
-    width: 257px;
-  }
-}
-
-.nav-checkout-number {
-  align-items: center;
-  border: 2px solid;
-  border-radius: 12px;
-  box-sizing: border-box;
-  display: inline-flex;
-  height: 30px;
-  justify-content: center;
-  width: 30px;
-  margin-right: 8px;
-}
-
-.first ~ .nav-checkout-number {
-  color: #d0d0d0;
+#cart-quantity-buttons {
+ border: 1px solid black;
 }
 
 /* CART CSS END */
@@ -314,10 +265,28 @@ select:focus {
   padding-bottom: 10px;
 }
 
-.accountinput {
+#account-form-navigation {
+  font-size: 25px;
+  font-weight: 500;
+  padding-bottom: 27px;
+  text-align: left;
+}
+
+#account-form-navigation li {
+  padding: 0;
+  height: max-content;
+}
+
+#account-forms input:not([type="checkbox"]){
   border: 1px solid rgb(213, 213, 213);
-  background: rgb(226, 226, 226);
-  color: #8a8686;
+  background: var(--color-input-background);
+  color: #999;
+  width: 100%;
+  height: 30px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 30px 15px;
+  border-color: var(--color-input-background);
 }
 
 #google-button,
@@ -396,14 +365,6 @@ select:focus {
 
 /* ACCOUNT CSS END */
 
-/*CSS TO TOGGLE BUTTON ICON */
 
-.toggle_icon a button div {
-  display: none;
-}
 
-@media (min-width: 720px) {
-  .toggle_icon a button div {
-    display: inline-block;
-  }
-}
+
