--- a/src/index.css
+++ b/src/index.css
@@ -53,14 +53,19 @@ body {
 
 /* Nav links*/
 
-.link-border {
+ul .only-medium, ul .only-medium a {
+height: 100%;
+}
+
+#nav-link .link-border {
   border-bottom: 3px solid #00000000;
   border-top: 3px solid #0000;
   box-sizing: border-box;
   transition: border 0.2s ease-in-out;
+  padding: 0 8px;
 }
 
-.link-border:hover {
+#nav-link .link-border:hover {
   border-bottom: 3px solid #ff6900;
   border-top: 3px solid #0000;
   box-sizing: border-box;
@@ -181,8 +186,10 @@ body {
 
 /* CART CSS START */
 
+
+
 #cart-quantity-buttons {
-  border: 1px solid black;
+ border: 1px solid black;
 }
 
 /* CART CSS END */
@@ -275,7 +282,7 @@ select:focus {
   height: max-content;
 }
 
-#account-forms input:not([type="checkbox"]) {
+#account-forms input:not([type="checkbox"]){
   border: 1px solid rgb(213, 213, 213);
   background: var(--color-input-background);
   color: #999;
@@ -363,10 +370,6 @@ select:focus {
 
 /* ACCOUNT CSS END */
 
-/* Tab CSS Active */
-.tab.active {
-  font-weight: normal;
-  color: #ff6900;
-  border-color: #ff6900;
-  background-color: #ff6a002c;
-}
+
+
+
